# conan-scm-revision

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
data/: gitRevision.cpp.in
src/: aa.cpp  aa.h  gitRevision.h  main.cpp
